[gd_scene load_steps=4 format=3 uid="uid://be8rapkyh6ild"]

[ext_resource type="PackedScene" uid="uid://bg40axeqo0mxg" path="res://Core/UI/HUD/DetailsInterface/details_board.tscn" id="1_1cs81"]
[ext_resource type="Script" path="res://Core/UI/HUD/DetailsInterface/details_interface.gd" id="1_ru0wa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_575w3"]
bg_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.921569, 0.898039, 0.729412, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[node name="DetailsInterface" type="PanelContainer"]
offset_right = 176.0
offset_bottom = 231.0
theme_override_styles/panel = SubResource("StyleBoxFlat_575w3")
script = ExtResource("1_ru0wa")

[node name="DetailsContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="UnitClassLabel" type="Label" parent="DetailsContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Name"
horizontal_alignment = 1

[node name="BoardOuterContainer" type="Control" parent="DetailsContainer"]
custom_minimum_size = Vector2(176, 176)
layout_mode = 2

[node name="BoardContainer" type="SubViewportContainer" parent="DetailsContainer/BoardOuterContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -88.0
offset_right = 88.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BoardViewport" type="SubViewport" parent="DetailsContainer/BoardOuterContainer/BoardContainer"]
handle_input_locally = false
size = Vector2i(176, 176)
size_2d_override = Vector2i(224, 224)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="DetailsBoard" parent="DetailsContainer/BoardOuterContainer/BoardContainer/BoardViewport" instance=ExtResource("1_1cs81")]
unique_name_in_owner = true

[node name="UnitSprite" type="TextureRect" parent="DetailsContainer/BoardOuterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -13.0
offset_right = 13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(13, 13)

[node name="HSeparator" type="HSeparator" parent="DetailsContainer"]
layout_mode = 2

[node name="UnitDescriptionLabel" type="Label" parent="DetailsContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(0, 51)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 14
text = "Unit description that tells the player how the unit works"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
